Repaired day-offer layout on mobile.

--- a/www/style.css
+++ b/www/style.css
@@ -26,16 +26,6 @@
 	height: auto;
 }
 
-.fotacek {
-	float: right;
-	padding-right: 15px;
-}
-
 .fotacek:hover {
 	color: #337ab7;
-}
-
-.cena {
-	float: right;
-	padding-right: 20px;
 }
